# Log_Analytics_Service

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: cd.yml  ci.yml
infra/: bootstrap.tf  github_oidc.tf
sample-logs/: 2025-09-15T14-00.jsonl
src/log_analytics/: cli.py  core.py  logging_config.py  main.py  s3_reader.py  server.py
terraform/environments/prod/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
terraform/modules/cloudfront/: main.tf  outputs.tf  variables.tf
terraform/modules/ecr/: main.tf  outputs.tf
terraform/modules/ecs/: main.tf  outputs.tf  variables.tf
terraform/modules/iam/: main.tf  outputs.tf  variables.tf
terraform/modules/vpc/: main.tf  outputs.tf  variables.tf
tests/: conftest.py  test_api.py  test_core.py  test_s3_reader.py  test_streaming.py
